# CreditAssignment-LongHorizon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile.cpu  Dockerfile.tpu  README.md  cloudbuild.yaml  gcs_sync.py  launch_tpu.sh  launch_vertex.py
scripts/: aggregate_results.py  gen_all_teacher_data.sh  gen_teacher_data.py  run_maxtext_sweep.sh  run_paper_matrix.py  smoke_all_methods.sh
src/cts/: __init__.py
src/cts/backends/: __init__.py  hf_flax.py  local_api.py  maxtext_adapter.py  nano_lm.py  scale_adapter.py  tunix_adapter.py
src/cts/configs/: base.yaml
src/cts/configs/backend/: local_hf.yaml  local_nano.yaml  maxtext.yaml  tunix.yaml
src/cts/configs/method/: cts.yaml  dpo.yaml  grpo_critique.yaml  grpo_outcome.yaml  grpo_verifier.yaml  sft.yaml
src/cts/configs/task/: apps.yaml  fixtures_math.yaml  gsm8k.yaml  mbpp_smoke.yaml
src/cts/data/: __init__.py  apps.py  gsm8k.py  mbpp.py  replay.py  schema.py  splits.py  taxonomy.py
src/cts/data/fixtures/: apps_tiny.jsonl  gsm8k_tiny.jsonl
src/cts/eval/: __init__.py  horizon.py  human_eval.py  metrics.py  run_eval.py  stats.py
src/cts/losses/: __init__.py  alignment.py  decode_anchor.py  energy_loss.py  sinkhorn.py  soft_dtw.py
src/cts/methods/: __init__.py  _batch.py  b0_sft_revision.py  b1_dpo.py  b2_grpo_outcome.py  b3_grpo_verifier.py  b4_grpo_critique.py  b5_cts.py
src/cts/models/: __init__.py  energy.py  projection.py
src/cts/rl/: __init__.py  critique_reward.py  grpo.py  rollout.py  verifier.py
src/cts/train/: fairness.py  loop.py  main.py
src/cts/utils/: __init__.py  logging.py  seeding.py  tokenizer.py
tests/integration/: test_main_entry.py  test_methods_smoke.py
tests/unit/: test_bug_fixes.py  test_fairness.py  test_grpo.py  test_losses.py  test_schema.py  test_splits_taxonomy.py  test_stats_and_metrics.py  test_verifier.py
(+5 files in other folders)
