[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cts"
version = "0.0.1"
description = "Critique-Transport Smoothing: latent trajectory alignment for LLM credit assignment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jaden Fix" }]
dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "flax>=0.10.0",
  "optax>=0.2.3",
  "orbax-checkpoint>=0.6.0",
  "chex>=0.1.86",
  "einops>=0.8.0",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "hydra-core>=1.3",
  "pydantic>=2.7",
  "rich>=13.7",
]

[project.optional-dependencies]
ot = ["ott-jax>=0.4.7"]
hf = ["transformers>=4.44", "datasets>=2.20", "tokenizers>=0.19"]
teacher = ["anthropic>=0.34", "openai>=1.40"]
scale = ["tunix"]
gcp = ["google-cloud-storage>=2.16", "google-cloud-aiplatform>=1.60"]
dev = ["pytest>=8", "pytest-xdist>=3", "ruff>=0.6", "pyright>=1.1"]

[project.scripts]
cts-train = "cts.train.main:main"
cts-eval = "cts.eval.run_eval:main"
cts-gen-teacher = "cts.data.teacher.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cts"]

[tool.hatch.build]
include = ["src/cts/**/*.py", "src/cts/**/*.yaml", "src/cts/data/fixtures/*.jsonl"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: slower integration tests (RL wrappers, JAX compile cost)",
  "needs_ott: requires ott-jax",
  "needs_hf: requires transformers/datasets",
  "needs_tunix: requires tunix",
  "needs_maxtext: requires maxtext",
]
filterwarnings = ["ignore::DeprecationWarning"]
